<resources>
    <string name="app_name">Joy And Fear</string>
    <string name="title_map">Map</string>
    <string name="title_statistic">Settings</string>
    <string name="title_tests">Tests</string>
    <string name="test_start">Start</string>
    <string name="test_end">Back to Map</string>
    <string name="test_ryakhovsky">Ryakhovsky test</string>
    <string name="test_zung">Zung Self-Rating Depression Scale (SDS)</string>
    <string name="test_snyder">Assessment of self-control in communication (M. Snyder)</string>
    <string name="test_martin_seligman">Martin-Seligman Optimism Test</string>
    <string name="test_buss_durkee">Buss-Durkee Hostility Inventory, BDHI</string>
    <string name="test_beck">Beck Depression Inventory</string>
    <string name="test_empathy">Empathy test</string>
    <string name="test_sheehan">Sheehan Patient-Rated Anxiety Scale, SPRAS</string>
    <string name="test_spilberg">The Spielberger State-Trait Anxiety Inventory (STAI)</string>
    <string name="test_taylor">Taylor\'s anxiety measurement technique</string>
    <string name="bt_lang">Language</string>
    <string name="lng_eng">English</string>
    <string name="lng_rus">Русский</string>
    <string name="title_start">HOW IS YOUR DAY?</string>
</resources>