<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tests.TestsFragment">

    <GridLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:rowCount="5"
        android:columnCount="1"
        >

        <Button
            android:id = "@+id/button_1"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_height="100sp"
            android:layout_rowWeight="1"
            android:textSize="18dp"
            android:layout_margin="5sp"
            android:text="@string/test_zung"
            />

        <Button
            android:id = "@+id/button_2"
            android:layout_gravity="fill"
            android:layout_height="100sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="18dp"
            android:layout_margin="5sp"
            android:text="@string/test_spilberg"
            />

        <Button
            android:id="@+id/button_3"
            android:layout_height="100sp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5sp"
            android:text="@string/test_beck"
            android:textSize="18sp" />
        <Button
            android:id = "@+id/button_4"
            android:layout_gravity="fill"
            android:layout_height="100sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="18dp"
            android:layout_margin="5sp"
            android:text="@string/test_ryakhovsky"
            />
        <Button
            android:id = "@+id/button_5"
            android:layout_gravity="fill"
            android:layout_height="100sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="18dp"
            android:layout_margin="5sp"
            android:text="@string/test_taylor"
            />
        <Button
            android:id = "@+id/button_6"
            android:layout_gravity="fill"
            android:layout_height="100sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="18dp"
            android:layout_margin="5sp"
            android:text="@string/test_snyder"
            />
        <Button
            android:id = "@+id/button_7"
            android:layout_gravity="fill"
            android:layout_height="100sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="18dp"
            android:layout_margin="5sp"
            android:text="@string/test_sheehan"
            />

    </GridLayout>>
</ScrollView>